--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <header>
 
-    <a href="#" class="logo">c<span class="fas fa-virus"></span>vid-19</a>
+    <a href="#" class="logo">c<span class="fas fa-virus"></span>vI SURE</a>
 
     <div id="menu" class="fas fa-bars"></div>
 
@@ -62,37 +62,39 @@
         <div class="box">
             <img src="images/pre-1.png" alt="">
             <h3>wash your place</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, repudiandae aspernatur eum minus accusamus eligendi delectus ad? Similique, facilis esse?</p>
+            <p>Cleaning and disinfecting high-touch surfaces in your home regularly is an important precaution to lower the risk of infection.
+
+Follow cleaning product instructions for safe and effective use.</p>
         </div>
 
         <div class="box">
             <img src="images/pre-2.png" alt="">
             <h3>maintain distance</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, repudiandae aspernatur eum minus accusamus eligendi delectus ad? Similique, facilis esse?</p>
+            <p>Avoid close contact with sick people. If possible, maintain 6 feet between the person who is sick & household members. If you are taking care of someone sick, make sure to wear a face mask.</p>
         </div>
 
         <div class="box">
             <img src="images/pre-3.png" alt="">
             <h3>don't touch face</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, repudiandae aspernatur eum minus accusamus eligendi delectus ad? Similique, facilis esse?</p>
+            <p>To help prevent infections, keep your hands away from eyes, nose & mouth during the COVID-19 pandemic. Why? These mucous membranes are an entry portal for Covid-19 germs.</p>
         </div>
 
         <div class="box">
             <img src="images/pre-4.png" alt="">
             <h3>wash your hand</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, repudiandae aspernatur eum minus accusamus eligendi delectus ad? Similique, facilis esse?</p>
+            <p>Make sure to wash hands after you blow your nose, sneeze into a tissue, use the restroom, before preparing or eating food, applying make-up, handling contact lenses etc.</p>
         </div>
 
         <div class="box">
             <img src="images/pre-5.png" alt="">
             <h3>use napkin</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, repudiandae aspernatur eum minus accusamus eligendi delectus ad? Similique, facilis esse?</p>
+            <p>The Covid-19 virus is highly contaminable & hence it's necessary to use a paper napkin while sneezing, coughin etc. to help prevent spreading of germs.</p>
         </div>
 
         <div class="box">
             <img src="images/pre-6.png" alt="">
             <h3>wear a mask</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, repudiandae aspernatur eum minus accusamus eligendi delectus ad? Similique, facilis esse?</p>
+            <p>Masks and face coverings can prevent the wearer from transmitting the COVID-19 virus to others and may provide some protection to the wearer.</p>
         </div>
 
     </div>
