--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 </head>
 <body>
-<div>
+<!-- <div>
   <iframe src='https://webchat.botframework.com/embed/covid-19-chatbot-bot?s=ZelnxSucJvQ.tjpmZzHpHiWcXd9A1cYAISyWI61GEEn8cFnFqDtOMDU'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
-</div>
+</div> -->
 <!-- header section starts  -->
 
 <header>
@@ -44,7 +44,7 @@
     <div class="content">
         <h1>Prevention from Corona Virus</h1>
         <h3>stay home, stay safe</h3>
-        <a href="#" class="btn">how to prevent</a>
+        <a href="https://sites.google.com/view/covisure/home" class="btn">Know about covid-19</a>
     </div>
 
 </section>
@@ -171,7 +171,7 @@ Follow cleaning product instructions for safe and effective use.</p>
                 <img src="images/do-img1.png" alt="">
                 <div class="info">
                     <h3>wash your hand</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel odit quo saepe illum tempora corrupti sint distinctio, perferendis maxime illo!</p>
+                    <p>Make sure to wash hands after you blow your nose, sneeze into a tissue, use the restroom, before preparing or eating food, applying make-up, handling contact lenses etc.</p>
                 </div>
             </div>
 
@@ -179,7 +179,7 @@ Follow cleaning product instructions for safe and effective use.</p>
                 <img src="images/do-img2.png" alt="">
                 <div class="info">
                     <h3>always wear a mask</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel odit quo saepe illum tempora corrupti sint distinctio, perferendis maxime illo!</p>
+                    <p>Masks and face coverings can prevent the wearer from transmitting the COVID-19 virus to others and may provide some protection to the wearer.</p>
                 </div>
             </div>
 
@@ -187,7 +187,7 @@ Follow cleaning product instructions for safe and effective use.</p>
                 <img src="images/do-img3.png" alt="">
                 <div class="info">
                     <h3>stay home during fever</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel odit quo saepe illum tempora corrupti sint distinctio, perferendis maxime illo!</p>
+                    <p>If possible, maintain 6 feet between the person who is sick & household members. If you are taking care of someone sick, make sure to wear a face mask.</p>
                 </div>
             </div>
 
@@ -201,7 +201,7 @@ Follow cleaning product instructions for safe and effective use.</p>
                 <img src="images/dont-img1.png" alt="">
                 <div class="info">
                     <h3>avoid close contact with animals</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel odit quo saepe illum tempora corrupti sint distinctio, perferendis maxime illo!</p>
+                    <p>Avoid close contact, including petting, snuggling, being kissed or licked, and sharing food.</p>
                 </div>
             </div>
 
@@ -209,7 +209,7 @@ Follow cleaning product instructions for safe and effective use.</p>
                 <img src="images/dont-img2.png" alt="">
                 <div class="info">
                     <h3>avoid close contact with peoples</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel odit quo saepe illum tempora corrupti sint distinctio, perferendis maxime illo!</p>
+                    <p>Avoid close contact with sick people. If possible, maintain 6 feet between the person who is sick & household members. If you are taking care of someone sick, make sure to wear a face mask.</p>
                 </div>
             </div>
 
@@ -217,7 +217,8 @@ Follow cleaning product instructions for safe and effective use.</p>
                 <img src="images/dont-img3.png" alt="">
                 <div class="info">
                     <h3>avoid crowded area</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel odit quo saepe illum tempora corrupti sint distinctio, perferendis maxime illo!</p>
+                    <p>
+	Health experts are advising people to avoid going to festivals and places were people gather, such as busy shopping centers and markets.</p>
                 </div>
             </div>
 
@@ -252,7 +253,7 @@ Follow cleaning product instructions for safe and effective use.</p>
 
         <div class="box">
             <img src="images/doc2.png" alt="">
-            <h3>john doe</h3>
+            <h3>emily owen</h3>
             <span>senior expert</span>
             <div class="share">
                 <a href="#" class="fab fa-whatsapp"></a>
@@ -265,7 +266,7 @@ Follow cleaning product instructions for safe and effective use.</p>
 
         <div class="box">
             <img src="images/doc3.png" alt="">
-            <h3>john doe</h3>
+            <h3>kate linn</h3>
             <span>senior expert</span>
             <div class="share">
                 <a href="#" class="fab fa-whatsapp"></a>
@@ -304,7 +305,7 @@ Follow cleaning product instructions for safe and effective use.</p>
 
             <div class="box">
                 <img src="images/wash-c.png" alt="">
-                <h3>Between Fingurs</h3>
+                <h3>Between Fingers</h3>
             </div>
 
             <div class="box">
@@ -342,7 +343,7 @@ Follow cleaning product instructions for safe and effective use.</p>
 
         <div class="box">
             <h3>about us</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate minima soluta distinctio eaque magni veritatis dicta dolore dignissimos totam quis!</p>
+            <p>CoviSure is a Covid-19 infomation provider website that aims to address the common questions, queries and doubts related to the covid-19 pandemic.</p>
         </div>
 
         <div class="box">
@@ -375,7 +376,7 @@ Follow cleaning product instructions for safe and effective use.</p>
 
     </div>
 
-    <h1 class="credit"> created by <a href="#">mr. web designer</a> &copy; copyright @ 2021 </h1>
+    <h1 class="credit"> created by <a href="#">ameya mathur</a> &copy; copyright @ 2022 </h1>
 
 </div>
 
